# stepik_course_of_generation_python_for_pro

./: .pre-commit-config.yaml  pyproject.toml  tester.py
2.1/: 1.py  2.py  3.py  4.py
