[tool.poetry]
name = "stepik-course-of-generation-python-for-pro"
version = "0.1.0"
description = ""
authors = ["TheBreadEnergy <thebreadenergy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
